[package]
name = "ldtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_ecs_ldtk = "0.5.0"
bevy_ecs_tilemap = "0.9.0"
leafwing-input-manager = "0.8.0"
bevy_rapier2d = "0.20"
bevy-inspector-egui-rapier = { version = "*", features = ["rapier2d"]}
bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls"}

[profile.dev.package."*"]
opt-level = 3